<resources>
    <string name="app_name">NG Chat</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Login</string>
    <string name="FORGOT_USERNAME">Forgot Username</string>
    <string name="FORGOT_PASSWORD">Forgot Password</string>
    <string name="SIGN_UP">Sign up</string>
    <string name="USERNAME_HINT_STRING">Enter Username</string>
    <string name="PASSWORD_HINT_STRING">Enter Password</string>
    <string name="BUTTON_LOGIN">Login</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="USERNAME_EMAIL_HINT_STRING">Enter email</string>
    <string name="SIGN_UP_BUTTON">Sign up!</string>
    <string name="SIGN_UP_ERROR_MESSAGE">Please make sure all fields are not empty</string>
    <string name="SIGN_UP_ERROR_TITLE">Incomplete form</string>
    <string name="LOGIN_ERROR_TITLE">Login Failed</string>
    <string name="MENU_LOGOUT_LABEL">Log out</string>
    <string name="title_activity_forgot_password">Password Reset</string>
    <string name="FORGOT_PASSWORD_RESET_BUTTON">Reset Password</string>
    <string name="FORGOT_PASSWORD_EMPTY_EMAIL">E-mail field must be filled with valid email</string>
    <string name="FORGOT_PASSWORD_SUCCESS_MESSAGE">A link to reset your password has been sent to the email address provided.</string>
    <string name="FORGOT_PASSWORD_ERROR_TITLE">Error</string>
    <string name="FORGOT_PASSWORD_RESET_SUCCESS_TITLE">Reset Successful</string>
    <string name="TITLE_SECTION1">Inbox</string>
    <string name="TITLE_SECTION2">Friends</string>
    <string name="TITLE_SECTION3">Contacts</string>
    <string name="EMPTY_INBOX_LABEL">No new messages</string>
    <string name="EMPTY_FRIENDS_LABEL">Add friends to begin</string>
    <string name="MENU_EDIT_FRIENDS_LABEL">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="ERROR_TITLE">We\'re sorry!</string>
    <string name="FRIEND_REQUEST_SENT">A friend request has been sent to</string>


    <!-- Camera functionality strings-->
    <string name="MENU_CAMERA_LABEL">Camera</string>
    <string name="ERROR_EXTERNAL_STORAGE">There was a problem accessing your device\'s external storage</string>
    <string name="GENERAL_ERROR">Sorry, there was an error!</string>
    <string name="VIDEO_FILE_SIZE_WARNING">The selected video must be less than 10 MB</string>
    <string name="ERROR_OPENING_FILE">There was an error opening the file</string>
    <string name="ERROR_FILE_SIZE_TOO_LARGE">The selected file is too large, please select a new file.</string>

    <string-array name="CAMERA_CHOICES">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="EMPTY_RECIPIENTS_STRINGS_MESSAGE">Chosse some firends first</string>
    <string name="ERROR_SELECTING_FILE_FOR_UPLOAD">There was an error with the file selected, please select a different file</string>

</resources>
