<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_login" tools:context="com.sidelance.ngchat.LoginActivity">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/userNameEditText"
            android:textSize="24sp"
            android:hint="@string/USERNAME_HINT_STRING"
                android:layout_gravity="center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">
            <requestFocus/>
            </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordEditText"
            android:textSize="24sp"
            android:hint="@string/PASSWORD_HINT_STRING"
            android:layout_gravity="center"
            android:layout_below="@+id/userNameEditText"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/BUTTON_LOGIN"
            android:id="@+id/loginButton"
            android:layout_gravity="center"
            android:layout_below="@+id/passwordEditText"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin" />


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SIGN_UP"
            android:id="@+id/signUpTextView"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="#000000"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/loginButton"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FORGOT_USERNAME"
            android:id="@+id/forgotUsernameTextView"
            android:textColor="#000000"
            android:layout_weight="2"
            android:gravity="center" />

        <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FORGOT_PASSWORD"
                    android:id="@+id/forgotPasswordTextView"
                    android:textColor="#000000"
                    android:layout_alignBaseline="@+id/loginButton"
                    android:layout_alignBottom="@+id/loginButton"
                    android:layout_alignRight="@+id/passwordEditText"
                    android:layout_alignEnd="@+id/passwordEditText"
            android:layout_weight="2"
            android:gravity="center" />
    </LinearLayout>


</RelativeLayout>
